# LogParser

./: README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
log_analizer/: .gitignore  cli.py  main.py
log_analizer/core/: base.py  django_parser.py  parser.py  report_factory.py  stats_collector.py  stats_merger.py
log_analizer/reports/: __init__.py  handlers.py
log_analizer/reports/plugins/: __init__.py  django_handlers.py  handlers_report.py
log_analizer/tests/: test_base.py  test_cli.py  test_django_parser.py  test_handlers.py  test_log_processor.py  test_parser.py  test_plugin.py  test_report_factory.py  test_stats_merger.py
